搜索语言分词增加英语

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,7 +46,7 @@ theme:
 # Customization
 extra:
   search:
-    language: 'jp'
+    language: 'en,jp'
   copyright: 'CC BY-NC-SA 4.0'
 
 extra_javascript:
