--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,11 +33,12 @@ theme:
   static_templates:
     - 404.html
   language: 'zh'
+  favicon: '_static/img/favicon.ico'
   palette:
     primary: 'white'
     accent: 'red'
   logo:
-    icon: 'school'
+    icon: '_static/img/logo.png'
   font:
     text: 'Fira Sans'
     code: 'Fira Mono'
