--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ copyright: 'Copyright &copy; 2016 - 2019'
 nav:
   - 文档:
     - 构建镜像站: index.md
+    - 白名单: document/whitelist.md
     - 编程语言: document/language.md
     - 框架: document/framework.md
     - 数据库: document/database.md
