--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,7 +14,7 @@ copyright: 'Copyright &copy; 2016 - 2019'
 
 # Contents
 nav:
-  - 构建镜像站: index.md
+  - 开源文档中文镜像服务: index.md
   - 镜像白名单: document/whitelist.md
   - 文档分类:
     - 编程语言: document/language.md
