调整目录结构

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,15 +16,15 @@ copyright: 'Copyright &copy; 2016 - 2019'
 nav:
   - 开源文档中文镜像服务: index.md
   - 镜像白名单: document/whitelist.md
-  - 文档分类:
-    - 编程语言: document/language.md
-    - 框架: document/framework.md
-    - 数据库: document/database.md
-    - 印记中文: https://docschina.org/
-  - AWESOME:
+  - 编程语言中文文档: document/language.md
+  - 热门框架中文文档: document/framework.md
+  - 数据库中文文档: document/database.md
+  - 其他热门项目中文文档: document/other.md
+  - 印记中文: https://docschina.org/
+  - 开源项目索引列表:
     - 索引说明: awesome/readme.md
-    - 中文索引: https://asmcn.icopy.site/
-    - 英文索引: https://asmen.icopy.site/
+    - 开源项目中文索引: https://asmcn.icopy.site/
+    - 开源项目英文索引: https://asmen.icopy.site/
 
 
 # Theme
