--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,7 @@ nav:
     - 开源项目中文索引: https://asmcn.icopy.site/
     - 开源项目英文索引: https://asmen.icopy.site/
   - 镜像白名单: document/whitelist.md
-  - 当前镜像网页: document/mirrorPages.md
+  - 当前镜像网页: https://icopy.site/document/mirrorPages/pages.html
   - 印记中文: https://docschina.org/
 
 
