--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,16 +15,15 @@ copyright: 'Copyright &copy; 2016 - 2019'
 # Contents
 nav:
   - 开源文档中文镜像服务: index.md
-  - 编程语言中文文档: document/language.md
-  - 热门框架中文文档: document/framework.md
-  - 数据库中文文档: document/database.md
-  - 其他热门项目中文文档: document/other.md
-  - 开源项目索引列表:
+  - 编程语言: document/language.md
+  - 热门框架: document/framework.md
+  - 数据库: document/database.md
+  - 其他热门项目: document/other.md
+  - 开源项目导航:
     - 索引说明: awesome/readme.md
-    - 开源项目中文索引: https://asmcn.icopy.site/
-    - 开源项目英文索引: https://asmen.icopy.site/
-  - 镜像白名单: document/whitelist.md
-  - 当前镜像网页: https://icopy.site/document/mirrorPages/pages.html
+    - 中文导航: https://asmcn.icopy.site/
+    - 英文导航: https://asmen.icopy.site/
+  - 镜像网站名单: document/whitelist.md
   - 印记中文: https://docschina.org/
 
 
