--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ nav:
   - 数据库: document/database.md
   - 构建系统: document/build.md
   - 数据可视化: document/dataVisual.md
+  - 机器学习: document/ML.md
   - 其他热门项目: document/other.md
   - 开源项目导航:
     - 索引说明: awesome/readme.md
