--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,9 +14,8 @@ copyright: 'Copyright &copy; 2016 - 2019'
 
 # Contents
 nav:
-  - 开源文档中文镜像服务: index.md
+  - 开源文档中文镜像站: index.md
   - 镜像网站白名单: document/whitelist.md
-  - readthedocs.io: document/readthedocs.md
   - 编程语言: document/language.md
   - 热门框架: document/framework.md
   - 数据库: document/database.md
